# ClamAI

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  _build-common.bat  build-dev.bat  build.bat  clam-running.log.bak  clam-service.log.bak  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docs/: AI智能体安全方案B.md  API清单.md  代码结构.md  快速使用.md  故障排查.md  数据流关系.md  项目架构.md
docs/clamai-service/: API清单.md  代码结构.md
server/: agent_security.go  anthropic_compat.go  anthropic_compat_test.go  audit.go  auth.go  auth_handlers.go  auth_jwt.go  auth_middleware.go  auth_users.go  config_api.go  db_adapter.go  db_apikeys.go  db_init.go  db_settings.go  db_stats.go  db_tasks.go  db_users.go  fast_test.bat  field_extraction.go  frontend_server.go  frontend_stub.go  go.mod  go.sum  gorm_init.go  handlers_admin.go  handlers_agent.go  handlers_analysis.go  handlers_apikey.go  handlers_proxy.go  handlers_proxytest.go  internal_call.go  logger.go  main.go  middleware.go  models.go  provider_routes.go  providers.go  providers_anthropic.go  providers_cn.go  providers_openai.go  (+14 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/proxy-service/: auth.go  db.go  db_adapter.go  frontend_server.go  frontend_stub.go  go.mod  go.sum  main.go  providers.go  proxy_client.go  ratelimit.go  security.go  tls.go  vector.go
src-tauri/src/: commands.rs  config.rs  error.rs  main.rs  oauth.rs  proxy.rs  services.rs
src-tauri/src/components/: mod.rs
src/api/: auth.ts  (+11 more)
(+59 files in other folders)
